# radar

./: CITATION.cff  MANIFEST.in  Makefile  README.md  citation.bib  container-vars.mk  pyproject.toml  requirements-dev.in  tox.ini  web-compile-config.yml  wsgi.py
.github/: dependabot.yml
cookiecutter-templates/cookiecutter-radar-deployment/: README.md  cookiecutter.json
cookiecutter-templates/cookiecutter-radar-deployment/{{cookiecutter.__project_slug}}/: README.md  docker-compose.init.yml  docker-compose.override.yml.template  docker-compose.yml  init-deployment.sh
docker/: Dockerfile.mlflow-tracking  Dockerfile.nginx  Dockerfile.pytorch-cpu  Dockerfile.pytorch-gpu  Dockerfile.restapi  Dockerfile.tensorflow2-cpu  Dockerfile.tensorflow2-gpu  build.sh
docker/configs/: gunicorn.restapi.conf.py
docker/requirements/: linux-amd64-py3.11-pytorch-cpu-requirements.txt  linux-amd64-py3.11-pytorch-gpu-requirements.txt  linux-amd64-py3.11-restapi-requirements.txt  linux-amd64-py3.11-tensorflow2-cpu-requirements.txt  linux-amd64-py3.11-tensorflow2-gpu-requirements.txt  linux-arm64-py3.11-pytorch-cpu-requirements.txt  linux-arm64-py3.11-restapi-requirements.txt  linux-arm64-py3.11-tensorflow2-cpu-requirements.txt
docker/shellscripts/: entrypoint-mlflow-tracking.m4  entrypoint-nginx.m4  entrypoint-restapi.m4  entrypoint-worker.m4  fix-permissions.m4  healthcheck-worker.m4  parse-uri.m4  wait-for-it.sh
docs/assets/scss/: _page.scss  _tables.scss  radar.scss
docs/source/: _glossary_note.rst  conf.py  glossary.rst  index.rst
docs/source/_static/: applyLeaveNotice.js  jquery.leaveNotice-nist.js  jquery.visible.js  radar.css  smoothNavScroll.js
docs/source/_templates/: footer.html  layout.html
docs/source/deployment-guide/: docker-images-list-and-settings.rst  system-requirements.rst
docs/source/dev-guide/: contributing-commit-styleguide.rst  contributing-merge-request-guidelines.rst  index.rst
docs/source/getting-started/: acquiring-datasets.rst  building-the-containers.rst  examples-setup.rst  installation.rst  running-radar.rst
docs/source/overview/: executive-summary.rst
docs/source/reference/: api-reference-client.rst  api-reference-restapi.rst  api-reference-sdk.rst  task-engine-reference.rst
docs/source/user-guide/: custom-entry-points.rst  custom-task-plugins.rst  entry-points.rst  generics-plugin-system.rst  task-plugins-collection.rst  task-plugins.rst  the-basics.rst  the-web-frontend.rst
examples/: README.md
examples/DEPRECATED-pytorch-detectron2-demo/: README.md  demo.ipynb
examples/DEPRECATED-pytorch-detectron2-demo/src/: MLproject  poison_train.py  test.py  train.py
examples/DEPRECATED-pytorch-mnist-membership-inference/: README.md  demo.ipynb
examples/DEPRECATED-pytorch-mnist-membership-inference/src/: MLproject  mi.yml  train_mi.yml
examples/DEPRECATED-tensorflow-adversarial-patches/: README.md  demo-fruits360-patches.ipynb  demo-imagenet-patches.ipynb  demo-mnist-patches.ipynb
examples/DEPRECATED-tensorflow-adversarial-patches/src/: MLproject  deploy_patch.yml  gaussian_augmentation.yml  generate_patch.yml  infer.yml  jpeg_compression.yml  spatial_smoothing.yml  train_on_Mnist_patched.yml
examples/DEPRECATED-tensorflow-backdoor-poisoning/: README.md  demo-mnist-poison-backdoor-adv-embedding.ipynb  demo-mnist-poison-backdoor-baseline.ipynb  demo-mnist-poison-backdoor-clean-label.ipynb
examples/DEPRECATED-tensorflow-backdoor-poisoning/src/: MLproject  gaussian_augmentation.yml  gen_poison_clean_data.yml  gen_poison_data.yml  gen_poison_model.yml  infer.yml  jpeg_compression.yml  spatial_smoothing.yml  train.yml  train_on_run_dataset.yml  train_with_madry_pgd_defense.yml
examples/DEPRECATED-tensorflow-imagenet-resnet50/: README.md  demo-fgm.ipynb  demo-pixel-threshold.ipynb
examples/DEPRECATED-tensorflow-imagenet-resnet50/src/: MLproject  fgm.py  gaussian_augmentation.py  infer.py  init_model.py  jpeg_compression.py  pt.py  spatial_smoothing.py
examples/DEPRECATED-tensorflow-mnist-classifier/: README.md  demo.ipynb
examples/DEPRECATED-tensorflow-mnist-classifier/src/: MLproject  fgm.yml  train.yml
examples/DEPRECATED-tensorflow-mnist-feature-squeezing/: README.md  demo.ipynb
examples/DEPRECATED-tensorflow-mnist-feature-squeezing/src/: MLproject  cw_inf.yml  cw_l2.yml  deepfool.yml  feature_squeeze.yml  fgm.yml  infer.yml  jsma.yml
examples/DEPRECATED-tensorflow-mnist-model-inversion/: README.md  demo.ipynb
examples/DEPRECATED-tensorflow-mnist-model-inversion/src/: MLproject  mi.yml  train.yml
examples/DEPRECATED-tensorflow-mnist-pixel-threshold/: README.md  demo.ipynb
examples/DEPRECATED-tensorflow-mnist-pixel-threshold/src/: MLproject  pt.yml  train.yml
examples/scripts/: __init__.py  client.py  download_data.py  utils.py
nist/: README.md  RELEASE.md
nist/license/: LICENSE
requirements/: linux-amd64-py3.11-requirements-dev-pytorch.txt  linux-amd64-py3.11-requirements-dev-tensorflow.txt  linux-amd64-py3.11-requirements-dev.txt  linux-arm64-py3.11-requirements-dev-pytorch.txt  linux-arm64-py3.11-requirements-dev-tensorflow.txt  linux-arm64-py3.11-requirements-dev.txt  macos-amd64-py3.11-requirements-dev-pytorch.txt  macos-amd64-py3.11-requirements-dev-tensorflow.txt  macos-amd64-py3.11-requirements-dev.txt  macos-arm64-py3.11-requirements-dev-pytorch.txt  macos-arm64-py3.11-requirements-dev-tensorflow.txt  macos-arm64-py3.11-requirements-dev.txt  win-amd64-py3.11-requirements-dev-pytorch.txt  win-amd64-py3.11-requirements-dev-tensorflow.txt  win-amd64-py3.11-requirements-dev.txt
src/frontend/: README.md  index.html  package.json
src/radar/client/: __init__.py  _client.py
src/radar/pyplugs/: __init__.py  _plugins.py
src/radar/restapi/: __init__.py  app.py  bootstrap.py  config.py  custom_schema_fields.py  errors.py  routes.py  utils.py
src/radar/sdk/: __version__.py
src/radar/task_engine/: error_message.py  issues.py  run_experiment.py  task_engine.py  type_registry.py  type_validation.py  (+4 more)
tests/: conftest.py  utils.py
tests/cookiecutter_radar_deployment/: conftest.py  test_create_template.py
(+331 files in other folders)
